--- a/digital-agency-design-system-vue/package.json
+++ b/digital-agency-design-system-vue/package.json
@@ -12,9 +12,20 @@
     "vue": "3.2.45"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "5.43.0",
+    "@typescript-eslint/parser": "5.43.0",
     "@vitejs/plugin-vue": "3.2.0",
+    "eslint": "8.27.0",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-vue": "9.7.0",
+    "prettier": "2.7.1",
+    "stylelint": "14.15.0",
+    "stylelint-config-prettier": "9.0.4",
+    "stylelint-config-recess-order": "3.0.0",
+    "stylelint-config-standard-scss": "6.1.0",
     "typescript": "4.9.3",
     "vite": "3.2.4",
+    "vue-eslint-parser": "9.1.0",
     "vue-tsc": "1.0.9"
   }
 }
