--- a/digital-agency-design-system-vue/package.json
+++ b/digital-agency-design-system-vue/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "vue-tsc && vite build",
     "preview": "vite preview",
-    "_lint": "eslint src/**/*.{ts,vue}, stylelint src/**/*.{scss,vue}"
+    "lint": "eslint src/**/*.{ts,vue} && stylelint src/**/*.{scss,vue} && prettier src/**/*.{scss,vue}",
+    "lint:fix": "eslint src/**/*.{ts,vue} --fix && stylelint src/**/*.{scss,vue} --fix && prettier src/**/*.{scss,vue} --write"
+    
   },
   "dependencies": {
     "vue": "3.2.45"
