--- a/digital-agency-design-system-vue/.stylelintrc
+++ b/digital-agency-design-system-vue/.stylelintrc
@@ -13,13 +13,20 @@
     }
   ],
   "rules": {
+    "selector-class-pattern": null,
+    "selector-id-pattern": null,
+    "scss/at-mixin-pattern": null,
+    "scss/at-function-pattern": null,
+    "scss/dollar-variable-pattern": null,
+    "custom-property-pattern": null,
     "color-function-notation": "legacy",
     "media-feature-name-no-vendor-prefix": null,
     "no-descending-specificity": null,
     "value-no-vendor-prefix": null,
     "property-no-vendor-prefix": null,
     "function-name-case": null,
-    "font-family-no-missing-generic-family-keyword":[true,{"ignoreFontFamilies":["Lato"]}],
+    "font-family-no-missing-generic-family-keyword": null,
+    "media-feature-name-no-unknown": null,
     "at-rule-no-unknown": [
       true,
       {
