--- a/digital-agency-design-system-vue/.eslintrc
+++ b/digital-agency-design-system-vue/.eslintrc
@@ -18,7 +18,7 @@
     "project": "./tsconfig.json",
     "sourceType": "module"
   },
-  "ignorePatterns": ["*.d.ts"],
+  "ignorePatterns": ["*.d.ts","vite.config.ts"],
   "rules": {
     "vue/attribute-hyphenation": 0
   }
