--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -38,6 +38,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
+          cache-dependency-path: ./digital-agency-design-system-vue/yarn.lock
       - run: cd ./digital-agency-design-system-vue/
       - run: npm ci
       - run: npm run build --if-present
