--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -27,7 +27,9 @@ jobs:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
-    
+    defaults:
+      run:
+        working-directory: 'digital-agency-design-system-vue'
 
     strategy:
       matrix:
@@ -39,7 +41,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'yarn'
-          cache-dependency-path: ./digital-agency-design-system-vue/yarn.lock
+          cache-dependency-path: '**/yarn.lock'
       - run: cd ./digital-agency-design-system-vue/
       - run: npm ci
       - run: npm run build --if-present
