--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -27,13 +27,6 @@ jobs:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
-    #defaults:
-     # run:
-        # working-directory: digital-agency-design-system-vue
-
-    # strategy:
-     # matrix:
-       # node-version: [16.x, 18.x]
     
     steps:
       - name: Checkout
@@ -45,8 +38,7 @@ jobs:
           cache: yarn
           cache-dependency-path: digital-agency-design-system-vue/yarn.lock
       - run: cd ./digital-agency-design-system-vue/
-      - run: npm ci
-      - run: npm run build --if-present
+      - run: yarn run build --if-present
       - name: Setup Pages
         uses: actions/configure-pages@v2
       - name: Upload artifact
