--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -27,6 +27,13 @@ jobs:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: digital-agency-design-system-vue
+
+    # strategy:
+     # matrix:
+       # node-version: [16.x, 18.x]
     
     steps:
       - name: Checkout
