--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -44,7 +44,8 @@ jobs:
           node-version: 16
           cache: yarn
           cache-dependency-path: digital-agency-design-system-vue/yarn.lock
-      - run: yarn run build:page --if-present
+      - run: yarn install --frozen-lockfile
+      - run: yarn run build --if-present
       - name: Setup Pages
         uses: actions/configure-pages@v2
       - name: Upload artifact
