--- a/digital-agency-design-system-vue/package.json
+++ b/digital-agency-design-system-vue/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "yarn run vue-tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint ./**/*.{ts,vue} && stylelint ./**/*.{scss,vue} && prettier ./**/*.{scss,vue,ts} --check",
