--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -33,7 +33,7 @@ jobs:
 
     # strategy:
      # matrix:
-       # node-version: [16.x, 18.x]
+       # node-version: [16.x, 18.x, 20.x]
     
     steps:
       - name: Checkout
@@ -41,7 +41,7 @@ jobs:
       - name: Use Node.js v16
         uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: 20
           cache: yarn
           cache-dependency-path: digital-agency-design-system-vue/yarn.lock
       - run: yarn install --frozen-lockfile
