--- a/package.json
+++ b/package.json
@@ -48,5 +48,8 @@
     "vite": "5.0.8",
     "vue-eslint-parser": "9.3.2",
     "vue-tsc": "1.8.25"
+  },
+  "resolutions": {
+    "jackspeak": "2.1.1"
   }
 }
