--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -53,7 +53,7 @@ jobs:
         uses: actions/upload-pages-artifact@v1
         with:
           # Upload entire repository
-          path: ${{ env.WORKING_DIRECTORY }}/storybook-static
+          path: storybook-static
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v1
