--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite --host",
     "build": "yarn run vue-tsc && vite build",
     "preview": "vite preview",
+    "typeCheck": "yarn run vue-tsc",
     "lint": "eslint \"./**/*.{ts,vue}\" && stylelint \"./**/*.{scss,vue}\" && prettier \"./**/*.{scss,vue,ts}\" --check",
     "lint:fix": "eslint \"./**/*.{vue,ts}\" --fix && stylelint \"./**/*.{scss,vue}\" --fix && prettier \"./**/*.{scss,vue,ts}\" --write",
     "storybook": "storybook dev -p 6006",
