--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-dom": "18.2.0",
     "sass": "1.71.0",
     "storybook": "7.6.16",
+    "storybook-dark-mode": "3.0.3",
     "stylelint": "16.2.1",
     "stylelint-config-prettier": "9.0.5",
     "stylelint-config-recess-order": "4.6.0",
