--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
     "type": "git",
     "url": "git+https://github.com/Crayfisher-zari/digital-agency-design-system.git"
   },
+  "exports": {
+    ".": {
+      "import": "./dist/digital-gov-design-system-vue.js",
+      "require": "./dist/digital-gov-design-system-vue.umd.cjs"
+    }
+  },
   "scripts": {
     "dev": "vite --host",
     "build": "yarn run vue-tsc && vite build",
