--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "digital-agency-design-system-vue",
-  "version": "0.0.1",
+  "version": "0.0.1-beta",
   "type": "module",
   "author": "Nishihara Tsubasa",
   "license": "MIT",
