--- a/package.json
+++ b/package.json
@@ -44,39 +44,43 @@
     "vue": "3.5.13"
   },
   "devDependencies": {
-    "@storybook/addon-essentials": "8.6.9",
-    "@storybook/addon-interactions": "8.6.9",
-    "@storybook/addon-links": "8.6.9",
-    "@storybook/addon-viewport": "8.6.9",
-    "@storybook/blocks": "8.6.9",
-    "@storybook/test": "8.6.9",
-    "@storybook/vue3": "8.6.9",
-    "@storybook/vue3-vite": "8.6.9",
+    "@storybook/addon-essentials": "8.6.12",
+    "@storybook/addon-interactions": "8.6.12",
+    "@storybook/addon-links": "8.6.12",
+    "@storybook/addon-viewport": "8.6.12",
+    "@storybook/blocks": "8.6.12",
+    "@storybook/test": "8.6.12",
+    "@storybook/vue3": "8.6.12",
+    "@storybook/vue3-vite": "8.6.12",
     "@typescript-eslint/eslint-plugin": "7.5.0",
     "@typescript-eslint/parser": "7.5.0",
     "@vitejs/plugin-vue": "5.0.4",
-    "@vue/eslint-config-typescript": "13.0.0",
+    "@vue/eslint-config-prettier": "10.2.0",
+    "@vue/eslint-config-typescript": "14.5.0",
     "dotenv": "16.4.5",
-    "eslint": "8.57.0",
+    "eslint": "9.25.1",
     "eslint-config-prettier": "9.1.0",
-    "eslint-plugin-storybook": "0.8.0",
-    "eslint-plugin-vue": "9.24.0",
+    "eslint-plugin-oxlint": "0.16.8",
+    "eslint-plugin-storybook": "0.12.0",
+    "eslint-plugin-vue": "10.1.0",
     "init": "0.1.2",
+    "jiti": "2.4.2",
+    "oxlint": "0.16.8",
     "postcss-html": "1.6.0",
     "prettier": "3.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "1.74.1",
-    "storybook": "8.6.9",
-    "storybook-dark-mode": "4.0.1",
+    "storybook": "8.6.12",
+    "storybook-dark-mode": "4.0.2",
     "stylelint": "16.3.1",
     "stylelint-config-prettier": "9.0.5",
     "stylelint-config-recess-order": "5.0.0",
     "stylelint-config-recommended-vue": "1.5.0",
     "stylelint-config-standard-scss": "13.1.0",
-    "typescript": "5.4.4",
+    "typescript": "5.8.3",
     "vite": "6.2.2",
-    "vue-eslint-parser": "9.4.2",
+    "vue-eslint-parser": "10.1.3",
     "vue-tsc": "2.0.10"
   },
   "resolutions": {
