--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -43,10 +43,10 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: yarn
-          cache-dependency-path: yarn.lock
-      - run: yarn install --frozen-lockfile
-      - run: yarn run build-storybook
+          cache: pnpm
+          cache-dependency-path: pnpm-lock.yaml
+      - run: pnpm install --frozen-lockfile
+      - run: pnpm run build-storybook
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Upload artifact
