--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -39,6 +39,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        uses: pnpm/action-setup@v4
       - name: Use Node.js v20
         uses: actions/setup-node@v4
         with:
