--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -40,6 +40,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       - uses: pnpm/action-setup@v4
+        with: 
+          version: 10
       - name: Use Node.js v20
         uses: actions/setup-node@v4
         with:
