--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "preview": "vite preview",
     "typeCheck": "yarn run vue-tsc",
     "lint": "eslint \"./**/*.{ts,vue}\" && stylelint \"./**/*.{scss,vue}\" && prettier \"./**/*.{scss,vue,ts}\" --check",
-    "lint:oxlint": "oxlint . --fix -D correctness --ignore-path .gitignore && prettier \"./**/*.{scss,vue,ts}\" --write --experimental-cli ",
-    "lint:fix": "eslint \"./**/*.{vue,ts}\" --fix && stylelint \"./**/*.{scss,vue}\" --fix && prettier \"./**/*.{scss,vue,ts}\" --write",
+    "lint:oxlint": "oxlint . --fix -D correctness --ignore-path .gitignore && prettier \"./**/*.{scss,vue,ts}\" --write --experimental-cli",
+    "lint:fix": "eslint \"./**/*.{vue,ts}\" --fix && stylelint \"./**/*.{scss,vue}\" --fix && prettier \"./**/*.{scss,vue,ts}\" --write --experimental-cli",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
